Fixed spacing for <br> and modified loading of additional posts

--- a/static/blog/styles.css
+++ b/static/blog/styles.css
@@ -39,6 +39,10 @@ p {
 	margin-bottom: 15px;
 }
 
+br {
+	margin-bottom: 15px;
+}
+
 h1 {
 	font-family: 'Roboto', sans-serif;
 	font-size: 50px;
